# svndumpapi

./: .gitignore  Makefile  README.md  WORKSPACE.bazel  pom.xml
src/main/: BUILD.bazel
src/main/java/com/github/cstroe/svndumpgui/api/: BUILD.bazel  ConsumerExecutor.java  ContentChunk.java  FileContentChunk.java  FilterChain.java  FilterContinuation.java  MutableSvnDump.java  NewFilterChain.java  Node.java  NodeHeader.java  Preamble.java  Property.java  Repository.java  RepositoryConsumer.java  RepositoryFilter.java  RepositoryMutator.java  RepositoryValidationError.java  RepositoryValidator.java  RepositoryWriter.java  Revision.java  SvnDump.java  SvnDumpConsumer.java  SvnDumpError.java  SvnDumpMutator.java  SvnDumpParser.java  SvnDumpPreamble.java  SvnDumpValidationError.java  SvnDumpValidator.java  SvnDumpWriter.java  SvnNode.java  SvnNodeHeader.java  SvnProperties.java  SvnProperty.java  SvnRevision.java  SvnVisitable.java  TreeOfKnowledge.java
src/main/java/com/github/cstroe/svndumpgui/cli/: CliConsumer.java
src/main/java/com/github/cstroe/svndumpgui/internal/: AbstractRepositoryConsumer.java  AbstractSvnDumpConsumer.java  ContentChunkImpl.java  FileContentChunkImpl.java  FilterChain.java  NodeImpl.java  PreambleImpl.java  RepositoryImpl.java  RevisionImpl.java  SimplePrintStream.java  SvnDumpErrorAggregator.java  SvnDumpErrorImpl.java  SvnDumpImpl.java  SvnDumpParserImpl.java  SvnDumpPreambleImpl.java  SvnDumpValidationErrorAggregator.java  SvnDumpValidationErrorImpl.java  (+3 more)
src/main/javacc/: BUILD.bazel  Makefile  mergeinfo.jj  svndump.jj  test.dump
(+261 files in other folders)
